# text_classification-0q

./: .gitignore  README.md  create_issue_table.sql  customers_db.csv  interview_prep_guide.md  main.py  pyproject.toml  requirements.txt  setup_db.py
api/: app.py
api/static/: index.html
config/: config.yaml
data/: download_alternative_dataset.py  generate_dataset.py
src/: data_preprocessing.py  dll_loader.py  embedding_model.py  evaluate.py  lstm_model.py  model.py  notifier.py  predict.py  retrain.py  train.py
tests/: test_pipeline.py
