[project]
name = "text-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "setuptools<70",
    "boto3==1.34.0",
    "fastapi==0.108.0",
    "flask==3.0.0",
    "joblib==1.3.2",
    "lightgbm==4.1.0",
    "matplotlib==3.8.2",
    "mlflow==2.9.2",
    "nltk==3.8.1",
    "numpy==1.26.2",
    "pandas==2.1.4",
    "pyyaml==6.0.1",
    "scikit-learn==1.3.2",
    "scipy==1.11.4",
    "seaborn==0.13.0",
    "uvicorn==0.25.0",
    "xgboost==2.0.3",
]
